--- a/app/templates/meditations.html
+++ b/app/templates/meditations.html
@@ -32,7 +32,7 @@ Meditations
 
       <h4>Body Scan</h4>
       <audio id="music1" preload="true">
-        <source src="static/meditation-audios/bodyScan.m4a">
+        <source src="static/meditation-audios/bodyScan.mp3">
       </audio>
 
       <!-- Audio controls -->
@@ -58,7 +58,7 @@ Meditations
 
       <h4>Breathe</h4>
       <audio id="music2" preload="true">
-        <source src="static/meditation-audios/breathing.m4a">
+        <source src="static/meditation-audios/breathing.mp3">
       </audio>
 
       <!-- Audio controls -->
@@ -84,7 +84,7 @@ Meditations
 
       <h4>Loving Kindness</h4>
       <audio id="music3" preload="true">
-        <source src="static/meditation-audios/love.m4a">
+        <source src="static/meditation-audios/love.mp3">
       </audio>
 
       <!-- Audio controls -->
