--- a/app/templates/main-layout.html
+++ b/app/templates/main-layout.html
@@ -25,6 +25,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
     <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -35,6 +39,8 @@
 <body>
 
     <main id="main-screen">
+
+        <img src="/static/vectors/boxStack.svg" class="boxBackground">
 
         <!-- Sidebar navigation-->
         <div id="sidebar">
@@ -73,8 +79,6 @@
             <div id="mainview" class="animated slideInUp slow">
                 {% block main %}{% endblock %}
             </div>
-
-            <img src="/static/vectors/boxStack.svg" class="boxBackground">
 
         </div>
 
