--- a/app/templates/send.html
+++ b/app/templates/send.html
@@ -18,8 +18,7 @@ Looking for suggestions? <br> PROMPT: What made you laugh today?
 
 {% block main %}
 
-<p id="subtitle">Create a collection of stories, memes, meditations, support posts and messages to send to another
-    student. Once your box has been opened, its contents will also be shared to other users.</p>
+<p id="subtitle">Create a collection of stories, memes, meditations, support posts and messages to send to another student. Once your box has been opened, its contents will also be shared to other users.</p>
 
 <div class="boxScreen">
 
