--- a/app/static/send.css
+++ b/app/static/send.css
@@ -4,7 +4,7 @@
 
 #subtitle {
     display: block;
-  font-size: 25px;
+  font-size: 1.4vw;
   font-family: "Work Sans", sans-serif;
   text-align: left;
   margin-bottom: 5vh;
@@ -15,6 +15,7 @@
   flex-direction: row;
   justify-content: space-between;
   text-align: center;
+  align-content: center;
 }
 
 #boxMainView {
@@ -41,9 +42,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 1.2vw;
   margin: 2vh;
   padding: 10px;
+}
+
+.box h4 {
+  font-size: 1.5vw;
 }
 
 /* Menu to add items to box */
@@ -63,7 +68,7 @@
   justify-content: center;
   border-radius: 50px;
   border: none;
-  font-size: 25px;
+  font-size: 1.3vw;
   font-family: "Work Sans", sans-serif;
 }
 
@@ -106,13 +111,13 @@
 /* Choose boxes to view in receive screen */
 
 #chooseBox {
-    width: 30vw;
+    width: 50vw;
     height: 55vh;
 }
 
 #viewBox {
-    margin-left: 2vw;
-    width: 35vw;
+    margin: 0;
+    width: 55vw;
     height: 55vh;
     overflow-y: auto;
 }
@@ -141,6 +146,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-content: center;
+    margin-bottom: 0;
+    height: 8vh;
 }
 
 /* Select box to view */
