--- a/app/templates/main-layout.html
+++ b/app/templates/main-layout.html
@@ -55,7 +55,7 @@
             <a href="/support">Support</a>
 
             <!-- User specific packages -->
-            <div id="package" style="margin-top: 5vh;">
+            <div id="package">
                 <img src="/static/vectors/sendBox.svg" class="package-icon">
                 <a href="/send">Send a box</a>
             </div>
@@ -79,6 +79,12 @@
             <div id="mainview" class="animated slideInUp slow">
                 {% block main %}{% endblock %}
             </div>
+
+            <a href="https://forms.gle/xcw8XBMXQdzAkJmS7">
+                <button type="button" id="rate">
+                    <i class="material-icons">rate_review</i>
+                </button>
+            </a>
 
         </div>
 
