--- a/app/templates/meditations.html
+++ b/app/templates/meditations.html
@@ -36,7 +36,7 @@ Meditations
       </audio>
 
       <!-- Audio controls -->
-      <div id="audioplayer">
+      <div class="audioplayer">
         <i id="pButton1" class="material-icons">play_arrow</i>
         <div class="timeline" id="timeline1">
           <div class="playhead" id="playhead1"></div>
@@ -62,7 +62,7 @@ Meditations
       </audio>
 
       <!-- Audio controls -->
-      <div id="audioplayer">
+      <div class="audioplayer">
         <i id="pButton2" class="material-icons">play_arrow</i>
         <div class="timeline" id="timeline2">
           <div class="playhead" id="playhead2"></div>
@@ -88,7 +88,7 @@ Meditations
       </audio>
 
       <!-- Audio controls -->
-      <div id="audioplayer">
+      <div class="audioplayer">
         <i id="pButton3" class="material-icons">play_arrow</i>
         <div class="timeline" id="timeline3">
           <div class="playhead" id="playhead3"></div>
