--- a/app/static/meditations.css
+++ b/app/static/meditations.css
@@ -3,8 +3,6 @@
 .meditation-view {
   display: flex;
   width: 70vw;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 /* Cards containing meditations */
@@ -13,7 +11,6 @@
   background-color: white;
   border: 4px solid black;
   border-radius: 30px;
-  width: 25vw;
   font-family: "Work Sans", sans-serif;
   margin: 25px;
 }
@@ -27,17 +24,22 @@
 .view {
   display: flex;
   align-items: center;
-  height: 50vh;
   padding: 20px;
+  height: 100%;
 }
 
 /* Play meditation controls */
 
+.audioplayer {
+    display: flex;
+    justify-content: center;
+}
+
 .timeline {
-  width: 80%;
+  width: 70%;
   height: 2px;
   margin-top: 20px;
-  margin-left: 10px;
+  margin-left: 15px;
   float: left;
   border-radius: 15px;
   background: rgba(0, 0, 0, 0.3); 
@@ -50,6 +52,50 @@
   margin-top: -3px;
   background: black;
   cursor: pointer; 
+}
+
+#pButton1, #pButton2, #pButton3 {
+    font-size: 200%;
+}
+
+/* Desktop Screen */
+@media all and (min-width: 1000px) {
+
+    .meditation-view {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #med-card {
+        width: 25vw;
+    }
+
+}
+
+/* Keep meditation cards in sync */
+@media all and (min-width: 600px) and (max-width: 1000px) {
+
+    #med-card {
+        width: 60vw;
+    }
+
+    .meditation-view {
+        flex-direction: column;
+    }
+
+}
+
+/* Phone Screen */
+@media all and (max-width: 600px) {
+
+    .meditation-view {
+        flex-direction: column;
+    }
+
+    #med-card {
+        width: 80vw;
+    }
+
 }
 
 /* Animations */
