--- a/app/templates/send.html
+++ b/app/templates/send.html
@@ -13,7 +13,7 @@ Send a box
 {% endblock %}
 
 {% block guide %}
-Looking for suggestions? <br> PROMPT: What made you laugh today?
+Enjoying Boxed In? Please click on the button in the bottom right to rate us!
 {% endblock %}
 
 {% block main %}
@@ -57,6 +57,7 @@ Looking for suggestions? <br> PROMPT: What made you laugh today?
 
         <a href="/release"><button class="btn btn-primary" id="submit" type="submit">Send your box!</button></a>
     </div>
+
 </div>
 
 {% endblock %}
