--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -7,9 +7,9 @@ Error
 
 {% block main %}
 
-<div style="width: 40vw">
-    <h1 style="font-size: 5vw;">Sorry, there was an error.</h1>
-    <p style="font-size: 2vw;">{{ errorMessage }}</p>
+<div class="errorPage">
+    <h1>Sorry, there was an error.</h1>
+    <p>{{ errorMessage }}</p>
 </div>
 
 <input type="button" value="Back" id="enterButton" onclick="goBack()">
