--- a/app/templates/introduction.html
+++ b/app/templates/introduction.html
@@ -7,7 +7,7 @@ Welcome
 
 {% block main %}
 <h1>Welcome to Boxed In.</h1>
-<h1 style="font-size: 2vw;">You have successfully signed up!</h1>
+<h1>You have successfully signed up!</h1>
 <h4>Boxed In is a platform to encourage community spirit among students and teachers during 2020.</h4>
 <br>
 <h4>Share and receive random virtual care packages from containing funny stories from Zoom, memes, videos, meditations, and supportive messages.</h4>
