--- a/app/static/feed.css
+++ b/app/static/feed.css
@@ -167,11 +167,17 @@
 
     #guide {
         background-color: rgb(50, 47, 46);
-        height: 7vw;
-        margin-top: 2vw;
-        margin-right: 5vw;
-        width: 25vw;
+        height: 100%;
+        max-height: 7vw;
+        margin: auto 5vw;
+        width: 30vw;
         text-align: right;
+        display: flex;
+        align-items: center;
+    }
+
+    #guide p {
+        margin-bottom: 0;
         font-size: 1.2vw;
     }
 
@@ -184,6 +190,10 @@
         padding: 1.25vw;
     }
 
+    #scroll-blocker {
+        display: none;
+    }
+
 }
 
 /* Phone Screen */
@@ -193,8 +203,22 @@
         width: 100vw;
         height: 10vh;
         flex-direction: row;
-        flex-wrap: wrap;
         padding: 1.5vw;
+        overflow-x: auto;
+        overflow-y: hidden;
+        /* border-right: 15px solid rgba(0,0,0);
+		box-shadow: inset -30px 0px 50px 0px rgb(0, 0, 0); */
+    }
+
+    #scroll-blocker {
+        display: block;
+        width: 15vw;
+        height: 10vh;
+        z-index: 1000000;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background: linear-gradient(to right,rgb(50, 47, 46, 0), rgb(50, 47, 46, 1));
     }
 
     #main-screen {
@@ -202,31 +226,34 @@
     }
 
     #sidebar a {
-        font-size: 15px;
-        margin: 5px;
+        font-size: 18px;
+        margin: auto 10px;
     }
 
     #sidebar h3 {
         display: none;
     }
 
+    #package, #package2 {
+        display: flex;
+        flex-direction: row;
+        margin: 0 10px;
+    }
+
     #package {
-        margin-left: 30px;
-        margin-top: -30px;
+        padding-left: 5px
     }
 
     #package2 {
-        margin-left: 160px;
-        margin-top: -32px;
+        padding-right: 30px;
     }
 
-    #package, #package2 {
-        font-size: 1vw;
-        width: 200px;
+    #package a, #package2 a {
+        width: 100px;
     }
 
     #logo {
-        width: 50px;
+        width: 40px;
         padding: 5px;
         margin-right: 10px;
     }
@@ -237,21 +264,27 @@
     }
 
     #top {
-        height: 20vh;
+        height: 25vh;
         flex-direction: column;
-        margin-bottom: 5vh;
+        margin-bottom: 3vh;
+        
     }
 
     #header {
         font-size: 15vw;
+        height: 10vh;
+        margin-bottom: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     #guide {
         background-color: rgba(50, 47, 46, 0.75);
-        max-height: 10vh;
+        height: 10vh;
         width: 100vw;
-        margin-top: 2vh;
         text-align: center;
+        font-size: 100%;
     }
 
     #mainview {
