--- a/app/static/send.css
+++ b/app/static/send.css
@@ -4,7 +4,6 @@
 
 #subtitle {
     display: block;
-  font-size: 140%;
   font-family: "Work Sans", sans-serif;
   text-align: left;
   margin-bottom: 3vh;
@@ -157,6 +156,10 @@
 /* Desktop Screen */
 @media all and (min-width: 600px) {
 
+    #subtitle {
+        font-size: 140%;
+    }
+
     .boxScreen {
         flex-direction: row;
         justify-content: space-between;
@@ -184,13 +187,23 @@
         width: 55vw;
     }
 
+    #packageInfo {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        height: 100%;
+    }
+
     #packageInfo p {
         font-size: 1vw; 
         text-align: left;
+        margin: auto 10px 0;
+        width: 80%;
     }
 
     #packageInfo .package-icon {
-        margin-right: 10px;
         width: 20%;
     }
 
@@ -205,6 +218,7 @@
 
     #subtitle {
         margin-top: 2vh;
+        font-size: 4vw;
     }
 
     .boxScreen {
@@ -214,7 +228,7 @@
 
     .box {
         width: 100%;
-        height: 50vh;
+        min-height: 50vh;
         margin: 5vh 0;
     }
 
@@ -229,19 +243,31 @@
 
     #chooseBox {
         width: 100%;
+        height: 100%;
     }
 
     #viewBox {
         width: 100%;
+        height: 100%;
+    }
+
+    #packageInfo {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        height: 100%;
     }
 
     #packageInfo p {
         font-size: 3vw; 
         text-align: left;
+        margin: auto 10px 0;
+        width: 85%;
     }
 
     #packageInfo .package-icon {
-        margin-right: 10px;
         width: 15%;
     }
 
