--- a/app/static/userForms.css
+++ b/app/static/userForms.css
@@ -23,7 +23,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   text-align: center;
   background-color: antiquewhite;
   padding: 5vw;
@@ -36,6 +35,7 @@ main {
     .form {
         min-width: 30vw;
         max-width: 45vw;
+        margin: 10vh;
     }
 
     .form h1 {
@@ -55,13 +55,15 @@ main {
 /* Phone screens */
 @media all and (max-width: 600px) {
     .form {
+        margin: 10vh auto;
         min-width: 350px;
         max-width: 400px;
         padding: 30px;
+        max-height: 600px;
     }
 
     .form h1 {
-        margin-top: 5vh;
+        margin: 3vh;
         font-size: 60px;
     }
 
