--- a/app/templates/main-layout.html
+++ b/app/templates/main-layout.html
@@ -66,6 +66,7 @@
             </div>
 
         </div>
+        <div id="scroll-blocker"></div>
 
         <div class="mainContent" id="mainContent">
 
