Minor CSS fix ups.

--- a/app/templates/receive.html
+++ b/app/templates/receive.html
@@ -13,7 +13,7 @@ Your boxes
 {% endblock %}
 
 {% block guide %}
-What comes around goes around. The more boxes sent, the better!
+<p>What comes around goes around. The more boxes sent, the better!</p>
 {% endblock %}
 
 {% block main %}
