--- a/app/templates/send.html
+++ b/app/templates/send.html
@@ -13,7 +13,7 @@ Send a box
 {% endblock %}
 
 {% block guide %}
-Enjoying Boxed In? Please click on the button in the bottom right to rate us!
+<p>Enjoying Boxed In? Please click on the button in the bottom right to rate us!</p>
 {% endblock %}
 
 {% block main %}
