--- a/app/static/index.css
+++ b/app/static/index.css
@@ -117,12 +117,12 @@
 
 }
 
-.btn {
+#signup, #login {
   flex-grow: 1;
   padding: 10px;
   width: 10vw;
   min-width: 100px;
-  min-height: 30px;
+  min-height: 50px;
   font-family: 'Work Sans', sans-serif;
   font-size: 120%;
 }
