--- a/app/templates/box-layout.html
+++ b/app/templates/box-layout.html
@@ -82,6 +82,9 @@
                 </button>
             </a>
 
+            {% block alert %}
+            {% endblock %}
+
         </div>
 
     </main>
