--- a/app/templates/main-layout.html
+++ b/app/templates/main-layout.html
@@ -87,6 +87,9 @@
                 </button>
             </a>
 
+            {% block alert %}
+            {% endblock %}
+
         </div>
 
     </main>
