--- a/app/templates/send.html
+++ b/app/templates/send.html
@@ -195,3 +195,13 @@ Send a box
 
 
 {% endblock %}
+
+{% block alert %}
+{% if newBox %}
+<a href="/receive">
+    <button type="button" id="boxAlert">
+        <i class="material-icons">error_outline</i>
+    </button>
+</a>
+{% endif %}
+{% endblock %}
