--- a/app/templates/meditations.html
+++ b/app/templates/meditations.html
@@ -101,3 +101,13 @@ Meditations
 </div>
 
 {% endblock %}
+
+{% block alert %}
+{% if newBox %}
+<a href="/receive">
+    <button type="button" id="boxAlert">
+        <i class="material-icons">error_outline</i>
+    </button>
+</a>
+{% endif %}
+{% endblock %}
