--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -33,3 +33,13 @@ Support
 </div>
 {% endfor %}
 {% endblock %}
+
+{% block alert %}
+{% if newBox %}
+<a href="/receive">
+    <button type="button" id="boxAlert">
+        <i class="material-icons">error_outline</i>
+    </button>
+</a>
+{% endif %}
+{% endblock %}
