Fixed youtube link

--- a/app/templates/introduction.html
+++ b/app/templates/introduction.html
@@ -14,7 +14,7 @@ Welcome
 
 <video width="320" height="240" style="margin-bottom: 5vh;" controls>
     <source src="static/Boxed In Explanation.mp4" type="video/mp4">
-    Your browser does not support the video tag. Please click <a href="https://www.youtube.com/watch?v=ZJy-Zcq9rSM">here</a> to watch the introduction video.
+    Your browser does not support the video tag. Please click <a href="https://youtu.be/kQ3IE06GNVQ">here</a> to watch the introduction video.
 </video>
 
 <h5>When using Boxed In, please be mindful of what you send.</h5>
