--- a/app/templates/box-layout.html
+++ b/app/templates/box-layout.html
@@ -28,6 +28,10 @@
     <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
     <title>Boxed In: {% block title %}{% endblock %}</title>
 
 </head>
@@ -51,7 +55,7 @@
             <a href="/support">Support</a>
 
             <!-- User specific packages -->
-            <div id="package" style="">
+            <div id="package">
                 <img src="/static/vectors/sendBox.svg" class="package-icon">
                 <a href="/send">Send a box</a>
             </div>
