--- a/app/templates/send.html
+++ b/app/templates/send.html
@@ -104,7 +104,7 @@ Send a box
 
             <div class="modal-body">
                 <form action="/send" method="post" enctype="multipart/form-data">
-                    <label for="uploadMeme" style="font-size: 25px;">Select a photo:</label>
+                    <label for="uploadMeme">Select a photo:</label>
                     <input type="file" class="form-control-file" id="uploadMeme" name="uploadMeme">
                     <button class="btn btn-primary" id="submit" type="submit">Submit</button>
                 </form>
