--- a/app/static/index.css
+++ b/app/static/index.css
@@ -57,6 +57,11 @@
 
     #login {
         margin-left: 10vh;
+        padding: 10px;
+    }
+
+    #signup {
+        padding: 10px;
     }
 
     .errorPage {
@@ -83,7 +88,6 @@
         align-content: center;
         margin: 10vh auto;
         text-align: center;
-        width: 80vw;
         height: 55vh;
         border: 4px solid rgb(57, 58, 60);
         padding: 25px;
@@ -105,6 +109,11 @@
 
     #login {
         margin-top: 2vh;
+        padding: 5px;
+    }
+
+    #signup {
+        padding: 5px;
     }
 
     .errorPage h1 {
@@ -119,12 +128,10 @@
 
 #signup, #login {
   flex-grow: 1;
-  padding: 10px;
   width: 10vw;
   min-width: 100px;
-  min-height: 50px;
   font-family: 'Work Sans', sans-serif;
-  font-size: 120%;
+  font-size: 100%;
 }
 
 #signup:hover, #login:hover {
