--- a/app/static/send.css
+++ b/app/static/send.css
@@ -27,7 +27,6 @@
   border: 4px solid black;
   border-radius: 30px;
   font-family: "Work Sans", sans-serif;
-  margin-left: 100px;
   overflow-y: auto;
   padding: 30px;
 }
@@ -38,12 +37,16 @@
   align-items: center;
   justify-content: center;
   font-size: 110%;
-  margin: 2vh;
+  margin: 1.5vh auto;
   padding: 10px;
 }
 
+.item img {
+    width: 100%;
+}
+
 .box h4 {
-  font-size: 125%;
+  font-size: 110%;
 }
 
 /* Menu to add items to box */
@@ -61,7 +64,6 @@
   justify-content: center;
   border-radius: 50px;
   border: none;
-  font-size: 120%;
   font-family: "Work Sans", sans-serif;
 }
 
@@ -90,7 +92,6 @@
   padding: 10px;
   border: none;
   border-radius: 20px;
-  width: 150px;
   color: white;
 }
 
@@ -168,6 +169,7 @@
     .box {
         width: 35vw;
         height: 55vh;
+        margin-left: 5vw;
     }
 
     #list a {
@@ -177,6 +179,7 @@
 
     #submit {
         margin: 20px 0;
+        width: 150px;
     }
 
     #chooseBox {
@@ -233,12 +236,23 @@
     }
 
     #list a {
-        width: 100%;
+        width: 80vw;
         margin: 10px 0;
+        font-size: 4vw;
+    }
+
+    .list-group {
+        align-items: center;
+    }
+
+    .modal-title {
+        font-size: 100%;
     }
 
     #submit {
         margin: 12px 0;
+        width: 45vw;
+        font-size: 4vw;
     }
 
     #chooseBox {
@@ -261,7 +275,7 @@
     }
 
     #packageInfo p {
-        font-size: 3vw; 
+        font-size: 4vw; 
         text-align: left;
         margin: auto 10px 0;
         width: 85%;
