--- a/app/templates/box-layout.html
+++ b/app/templates/box-layout.html
@@ -65,6 +65,8 @@
                 <a href="/receive">Your boxes</a>
             </div>
 
+            <a href="/rules" id="rules">Rules</a>
+
         </div>
 
         <div class="mainContent" id="mainContent">
