--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,6 +14,9 @@ Register
   <div class="form-group">
     <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" id="field">
   </div>
+    <div class="form-group">
+        <input type="email" class="form-control" id="field" name="email" placeholder="School email">
+    </div>
   <div class="form-group">
     <input class="form-control" name="password" placeholder="Password" type="password" id="field">
   </div>
