--- a/app/static/feed.css
+++ b/app/static/feed.css
@@ -141,12 +141,12 @@
     }
 
     #package, #package2 {
-        margin-bottom: 3vh;
+        margin-bottom: 2vh;
         font-size: 1vw;
     }
 
     #package {
-        margin-top: 5vh;
+        margin-top: 3vh;
     }
 
     #logo {
@@ -208,8 +208,6 @@
         padding: 1.5vw;
         overflow-x: auto;
         overflow-y: hidden;
-        /* border-right: 15px solid rgba(0,0,0);
-		box-shadow: inset -30px 0px 50px 0px rgb(0, 0, 0); */
     }
 
     #scroll-blocker {
@@ -246,8 +244,8 @@
         padding-left: 5px
     }
 
-    #package2 {
-        padding-right: 30px;
+    #rules {
+        padding-right: 15vw;
     }
 
     #package a, #package2 a {
