--- a/app/templates/main-layout.html
+++ b/app/templates/main-layout.html
@@ -65,6 +65,8 @@
                 <a href="/receive">Your boxes</a>
             </div>
 
+            <a href="/rules" id="rules">Rules</a>
+
         </div>
         <div id="scroll-blocker"></div>
 
